Apple Magic Trackpad - kernel bug: Touch jump detected and discarded.
Summary
I have a lot of these messeges this in my log:
Mar 10 12:08:56 hostname gnome-shell[1759]: libinput error: event20 - Touchi: kernel bug: Touch jump detected and discarded.
Mar 10 12:08:56 hostname gnome-shell[1759]: See https://wayland.freedesktop.org/libinput/doc/1.14.1/touchpad-jumping-cursors.html for details
Steps to reproduce
I just use the touchpad. It spams my syslog.
libinput version you encountered the bug on
1.14.1 (from my ubuntu 19.10).
Hardware information:
Apple Magic Trackpad v1 Model A1339
Other log output:
-
libinput record
output: apple-magic-trackpad.yml -
libinput debug-events --verbose
output: I see the same error message like in the syslog.